抽象出GameModel，将Model和View分离，同时，GameModel作为Facade，负责与Frame打交道，同时负责内部事务